crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__detail-inspector_after_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
Trace · request 01a0a709 · 21:48:28 → 21:48:28 · 690ms
Operation                  Observed UTC             Offset     Duration   0ns        345ms     690ms
  ▾ request 01a0a709       21:48:28                 +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
    ▾ query                21:48:28                 +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
        admitted           21:48:28                 +0ns       —          ◆
        planning           21:48:28                 +1ms       219ms      ╺━━━━━━╸
    node: planning
    observed UTC: 21:48:28
    offset: +1ms
    duration: 219ms
    source: owned fixture
    payload:
      {
        "attempt": 2,
