crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__detail-inspector_styled_28x8.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
<fg:white,bold>Trace · 690ms</>
<fg:#a0a0a0>Operation</>
<fg:#a0a0a0>▾ trace  +0ns · 690ms</>
<fg:#a0a0a0>  ▾ request 01a0a709  +0ns ·</>
<fg:#a0a0a0>    ▾ query  +0ns · 690ms</>
<fg:#a0a0a0>        admitted  +0ns</>
<fg:white,bold>        planning  +1ms · 219</>
<fg:green>        completed  +690ms</>
