crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__detail-inspector_styled_after_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
<fg:white,bold>Trace · request 01a0a709 · 21:48:28 → 21:48:28 · 690ms</>
<fg:#a0a0a0>Operation</>                  <fg:#a0a0a0>Observed UTC</>             <fg:#a0a0a0>Offset</>     <fg:#a0a0a0>Duration</>   <fg:#a0a0a0>0ns</>        <fg:#a0a0a0>345ms</>     <fg:#a0a0a0>690ms</>
<fg:#a0a0a0>  ▾ request 01a0a709</>       <fg:#a0a0a0>21:48:28</>                 <fg:#a0a0a0>+0ns</>       <fg:#a0a0a0>690ms</>      <fg:#a0a0a0>╺━━━━━━━━━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>    ▾ query</>                <fg:#a0a0a0>21:48:28</>                 <fg:#a0a0a0>+0ns</>       <fg:#a0a0a0>690ms</>      <fg:#a0a0a0>╺━━━━━━━━━━━━━━━━━━━━━━━━╸</>
<fg:#a0a0a0>        admitted</>           <fg:#a0a0a0>21:48:28</>                 <fg:#a0a0a0>+0ns</>       <fg:#a0a0a0>—</>          <fg:#a0a0a0>◆</>
<fg:white,bold>        planning</>           <fg:#a0a0a0>21:48:28</>                 <fg:#a0a0a0>+1ms</>       <fg:#a0a0a0>219ms</>      <fg:cyan>╺━━━━━━╸</>
    <fg:#a0a0a0>node: planning</>
    <fg:#a0a0a0>observed UTC: 21:48:28</>
    <fg:#a0a0a0>offset: +1ms</>
    <fg:#a0a0a0>duration: 219ms</>
    <fg:white>source: owned fixture</>
    <fg:cyan,bold>payload:</>
      <fg:white>{</>
      <fg:cyan>  "attempt": 2,</>
