crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__exit-behavior_after_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:NORMAL pending:- cursor:2                  │
│bye                                             │
└────────────────────────────────────────────────┘
