crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__initial_after_50x15.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Command Palette ───────────────────────────────┐
│>                                               │
│────────────────────────────────────────────────│
│> Git: Commit                             Ctrl+G│
│  Git: Push                                     │
│  Git: Pull                                     │
│  Git: Branch                                   │
│  Build: Debug                            Ctrl+B│
│  Build: Release                                │
│  Build: Clean                                  │
│  Format All                              Ctrl+F│
│  Lint: Check                                   │
│  Test: Run                               Ctrl+T│
│[Root]                                          │
└────────────────────────────────────────────────┘
