crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__insert-empty_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
assertion_line: 156
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:INSERT pending:- cursor:0                  │
│                                                │
└────────────────────────────────────────────────┘
