crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__long-labels_30x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
                     ████████
                     ████████
                     ████████
Discovery Implement…Verificat…
