crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__lower-sibling_80x10.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
▾ request          ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
                   ■cpu:30% ■io:45% ■mem:15% ■gc:5% ■net:5%
  ▸ db_query       ╺━━━━━━━━━━━━━━━━━━━━━━━━━╸
  ▸ template_rend… ╺━━━━━━━━━━━━━━━━╸
  ▸ auth_check     ╺━━━━━━━╸
    logging        ╺━━━━╸
