crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__navigation-focus-collapse_28x8.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
Trace · 690ms
Operation
  ▾ request 01a0a709  +0ns ·
    ▾ query  +0ns · 690ms
        admitted  +0ns
        planning  +1ms · 219
        completed  +690ms
    ▸ stage 0  +40ms · 260ms
