crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__navigation-focus-collapse_after_100x14.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
Trace · request 01a0a709 · 21:48:28 → 21:48:28 · 690ms
Operation                  Observed UTC             Offset     Duration   0ns        345ms     690ms
▾ trace                    21:48:28                 +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
  ▾ request 01a0a709       21:48:28                 +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
    ▸ query                21:48:28                 +0ns       690ms      ╺━━━━━━━━━━━━━━━━━━━━━━━━╸
    ▸ stage 0              21:48:28                 +40ms      260ms       ╺━━━━━━━━╸
